url: http://localhost:8080/
---
- runScript: ../constants.js
- launchApp
- assertVisible:
    text: ".*Willkommen bei Radius.*"
- tapOn:
    id: "username"
- inputText: ${output.users.user1email}
- tapOn:
    id: "password"
- inputText: ${output.users.user1password}
- tapOn: Einloggen
- assertVisible:
    text: ".*Registrierung abschliessen.*"
- assertNotVisible:
    text: ".*Willkommen bei Radius.*"