url: http://localhost:8080/
---
- tapOn:
    id: home
- assertVisible:
    text: ".*Willkommen bei Radius.*"
- tapOn:
    id: "username"
- inputText: ${output.users.user1email}
- tapOn:
    id: "password"
- inputText: ${output.users.user1password}
- tapOn: Einloggen
- assertVisible:
    text: ".*Admin.*"
- assertVisible:
    text: ".*Statistics.*"
- assertNotVisible:
    text: ".*Willkommen bei Radius.*"