url: http://localhost:8080/
---
- tapOn:
    id: home
- assertVisible:
    text: ".*Willkommen bei Radius.*"
- tapOn:
    id: "username"
- inputText: ${output.users.user2email}
- tapOn:
    id: "password"
- inputText: ${output.users.user2password}
- tapOn: Einloggen
- assertVisible:
    text: ".*Registrierung abschliessen.*"
- assertNotVisible:
    text: ".*Admin.*"
- assertNotVisible:
    text: ".*Willkommen bei Radius.*"
