url: http://localhost:8080/
---
- tapOn:
    id: home
- assertVisible:
    text: ".*Willkommen bei Radius.*"
- tapOn:
    id: "username"
- inputText: ${output.users.user1email}
- tapOn:
    id: "password"
- inputText: ${output.users.user1wrongPassword}
- tapOn: Einloggen
- assertNotVisible:
    text: ".*Registrierung abschliessen.*"
- assertNotVisible:
    text: ".*Admin.*"
- assertVisible:
    text: ".*Beim Login ist ein Fehler aufgetreten.*"