url: http://localhost:8080/
---
- tapOn:
    id: "home"
- assertVisible:
      text: '.*Willkommen bei Radius.*'
- tapOn: Über Radius
- assertVisible:
    text: '.*Spielregeln.*'
- assertNotVisible:
      text: '.*Willkommen bei Radius.*'
