url: http://localhost:8080/
---
- tapOn:
    id: "home"
- assertVisible:
      text: '.*Willkommen bei Radius.*'
- tapOn: Umfrage
- assertVisible:
    text: '.*Was sind die wichtigsten Fragen der Schweiz.*'
- assertNotVisible:
      text: '.*Willkommen bei Radius.*'
