url: http://localhost:8080/
---
- assertVisible:
    text: ".*Willkommen bei Radius.*"
- tapOn:
    id: "firstName"
- inputText: ${output.users.user1firstName}
- tapOn:
    id: "lastName"
- inputText: ${output.users.user1lastName}
- tapOn:
    id: "regEmail"
- inputText: ${output.users.user1email}
- runFlow:
    when:
      notVisible:
        id: "regPassword"
    commands:
      - scroll
- tapOn:
    id: "regPassword"
- inputText: ${output.users.user1password}
- tapOn: "Registrieren"
- assertVisible:
    text: ".*Die Registrierung war erfolgreich.*"